Meta: Add authors

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Dark Discourse style",
   "license": "CC-BY-SA-4.0",
   "repository": "https://github.com/StylishThemes/Discourse-Dark",
-  "homepage": "https://github.com/StylishThemes/Discourse-Dark"
+  "homepage": "https://github.com/StylishThemes/Discourse-Dark",
+  "scripts": {
+    "authors": "bash tools/authors.sh"
+  }
 }
