--- a/package.json
+++ b/package.json
@@ -1,11 +1,34 @@
 {
   "name": "discourse-dark",
+  "title": "Discourse Dark",
   "version": "1.0.19",
-  "description": "Dark Discourse style",
+  "description": "Darken Discourse forums",
   "license": "CC-BY-SA-4.0",
   "repository": "https://github.com/StylishThemes/Discourse-Dark",
   "homepage": "https://github.com/StylishThemes/Discourse-Dark",
+  "main": "discourse-dark.user.css",
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-silverwind": "^2.0.2",
+    "fs-extra": "^7.0.0",
+    "perfectionist": "^2.4.0",
+    "semver": "^5.5.0",
+    "stylelint": "^9.4.0",
+    "stylelint-config-standard": "^18.2.0",
+    "updates": "^4.1.2"
+  },
   "scripts": {
-    "authors": "bash tools/authors.sh"
+    "authors": "bash tools/authors",
+    "clean": "npm run perfectionist && node tools/fix-perfectionist.js",
+    "eslint": "eslint --quiet --color tools/*.js",
+    "lint": "npm run eslint && npm run stylelint",
+    "major": "node tools/bump-version.js major && git add . && npm version -f major",
+    "minor": "node tools/bump-version.js minor && git add . && npm version -f minor",
+    "patch": "node tools/bump-version.js patch && git add . && npm version -f patch",
+    "perfectionist": "perfectionist discourse-dark.user.css discourse-dark.user.css --indentSize 2 --maxAtRuleLength 250",
+    "stylelint": "stylelint --silent --color -- discourse-dark.user.css",
+    "test": "npm run eslint && npm run stylelint",
+    "update": "updates -cu && npm install",
+    "usercss": "node tools/update-usercss.js"
   }
 }
