--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "node": ">=10"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-silverwind": "^3.0.3",
+    "eslint": "^6.0.1",
+    "eslint-config-silverwind": "^4.0.2",
     "perfectionist": "^2.4.0",
-    "stylelint": "^10.0.1",
+    "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
-    "updates": "^8.1.0",
-    "ver": "^4.4.1"
+    "updates": "^8.4.2",
+    "ver": "^5.1.2"
   },
   "scripts": {
     "authors": "bash tools/authors",
@@ -30,6 +30,6 @@
     "perfectionist": "npx perfectionist discourse-dark.user.css discourse-dark.user.css --indentSize 2 --maxAtRuleLength 250",
     "stylelint": "npx stylelint  --color -- discourse-dark.user.css",
     "test": "npm run eslint && npm run stylelint",
-    "update": "npx updates -cu && npm install"
+    "update": "npx updates -cuU && npx rimraf node_modules && npm install"
   }
 }
