--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "scripts": {
     "authors": "bash tools/authors",
     "clean": "npm run perfectionist && node tools/fix-perfectionist.js",
-    "eslint": "eslint --quiet --color tools/*.js",
+    "eslint": "eslint tools/*.js",
     "lint": "npm run eslint && npm run stylelint",
     "major": "versions -C -p major discourse-dark.user.css",
     "minor": "versions -C -p minor discourse-dark.user.css",
     "patch": "versions -C -p patch discourse-dark.user.css",
     "perfectionist": "npx perfectionist discourse-dark.user.css discourse-dark.user.css --indentSize 2 --maxAtRuleLength 250",
-    "stylelint": "npx stylelint  --color -- discourse-dark.user.css",
+    "stylelint": "stylelint discourse-dark.user.css",
     "test": "npm run eslint && npm run stylelint",
-    "update": "npx updates -cuU && npx rimraf node_modules && npm install"
+    "update": "updates -cuU && npm install"
   }
 }
